Initial commit - portfolio website

--- a/portfolio-website/index.html
+++ b/portfolio-website/index.html
@@ -70,13 +70,23 @@
         <span>Data Viz</span><span>HTML & CSS</span><span>Git</span>
       </div>
     </section>
-
+    
     <section id="contact" class="section container">
-      <h2>Contact</h2>
-      <p>If you'd like to reach out — email: <a href="mailto:youremail@example.com">sobiyabegumbegum@gmail.com</a></p>
-      <p>Or connect on <a href="#" target="_blank">https://github.com/sobiya57</a> / <a href="#" target="_blank">www.linkedin.com/in/sobiya-begum</a></p>
-    </section>
-  </main>
+  <h2>Contact</h2>
+  <p>If you'd like to reach out:</p>
+  <p>
+    Portfolio: 
+    <a href="https://sobiya57.github.io/portfolio/" target="_blank">https://sobiya57.github.io/portfolio/</a>
+  </p>
+  <p>
+    GitHub: 
+    <a href="https://github.com/sobiya57" target="_blank">https://github.com/sobiya57</a>
+  </p>
+  <p>
+    LinkedIn: 
+    <a href="https://www.linkedin.com/in/sobiya-begum" target="_blank">https://www.linkedin.com/in/sobiya-begum</a>
+  </p>
+</section>
 
   <footer class="site-footer">
     <div class="container">
